| Bug #59502 | race condition in drop logfile group | ||
|---|---|---|---|
| Submitted: | 14 Jan 2011 13:13 | Modified: | 26 Jan 2011 11:35 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Disk Data | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[14 Jan 2011 13:13]
Jonas Oreland
[14 Jan 2011 13:16]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.51-ndb-6.3.40 (revid:jonas@mysql.com-20110114131512-tv44pdevs5wtakeo) (version source revid:jonas@mysql.com-20110114131512-tv44pdevs5wtakeo) (merge vers: 5.1.51-ndb-6.3.40) (pib:24)
[14 Jan 2011 13:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/128747 3378 Jonas Oreland 2011-01-14 ndb - bug#59502 - check outstanding fs in LgmanContinueB::DROP_FILEGROUP
[15 Jan 2011 6:28]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.21 (revid:jonas@mysql.com-20110115062918-ymo4dgn62dzli9ny) (version source revid:jonas@mysql.com-20110115062918-ymo4dgn62dzli9ny) (merge vers: 5.1.51-ndb-7.0.21) (pib:24)
[15 Jan 2011 7:50]
Jonas Oreland
also pushed to 7.1.10
[26 Jan 2011 11:35]
Jon Stephens
Documented fix in the NDB-6.3.40, 7.0.21, and 7.1.10 changelogs, as follows:
In certain cases, a race condition could occur when DROP LOGFILE
GROUP removed the logfile group while a read or write of one of
the effected files was in progress, which in turn could lead to
a crash of the data node.
Closed.
