ndb - bug#59502 - check outstanding fs in LgmanContinueB::DROP_FILEGROUP